// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component null mounting 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Route
          exact={true}
          path="/:id(\\\\d+)"
          render={[Function]}
/>,
        undefined,
      ],
      "className": "shots",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "exact": true,
          "path": "/:id(\\\\d+)",
          "render": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Route
            exact={true}
            path="/:id(\\\\d+)"
            render={[Function]}
/>,
          undefined,
        ],
        "className": "shots",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "exact": true,
            "path": "/:id(\\\\d+)",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render a listing with 3 shots 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    shots={
        Immutable.OrderedMap {
            1: Object {
                "description": "Shot Description #1",
                "id": 1,
                "images": Object {
                  "hidpi": "https://dribbble/images/hidpi",
                  "normal": "https://dribbble/images/normal",
                },
                "likes_count": 100,
                "title": "Shot #1",
                "user": Object {
                  "avatar_url": "https://dribbble.com/user/avatar.png",
                  "html_url": "https://dribbble.com/user/",
                  "name": "User #1",
                },
                "views_count": 100,
              },
            2: Object {
                "description": "Shot Description #2",
                "id": 2,
                "images": Object {
                  "hidpi": "https://dribbble/images/hidpi",
                  "normal": "https://dribbble/images/normal",
                },
                "likes_count": 100,
                "title": "Shot #2",
                "user": Object {
                  "avatar_url": "https://dribbble.com/user/avatar.png",
                  "html_url": "https://dribbble.com/user/",
                  "name": "User #2",
                },
                "views_count": 100,
              },
            3: Object {
                "description": "Shot Description #3",
                "id": 3,
                "images": Object {
                  "hidpi": "https://dribbble/images/hidpi",
                  "normal": "https://dribbble/images/normal",
                },
                "likes_count": 100,
                "title": "Shot #3",
                "user": Object {
                  "avatar_url": "https://dribbble.com/user/avatar.png",
                  "html_url": "https://dribbble.com/user/",
                  "name": "User #3",
                },
                "views_count": 100,
              },
        }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Route
          exact={true}
          path="/:id(\\\\d+)"
          render={[Function]}
/>,
        Array [
          <withRouter(Shot)
            shot={
                        Object {
                                    "description": "Shot Description #1",
                                    "id": 1,
                                    "images": Object {
                                      "hidpi": "https://dribbble/images/hidpi",
                                      "normal": "https://dribbble/images/normal",
                                    },
                                    "likes_count": 100,
                                    "title": "Shot #1",
                                    "user": Object {
                                      "avatar_url": "https://dribbble.com/user/avatar.png",
                                      "html_url": "https://dribbble.com/user/",
                                      "name": "User #1",
                                    },
                                    "views_count": 100,
                                  }
            }
/>,
          <withRouter(Shot)
            shot={
                        Object {
                                    "description": "Shot Description #2",
                                    "id": 2,
                                    "images": Object {
                                      "hidpi": "https://dribbble/images/hidpi",
                                      "normal": "https://dribbble/images/normal",
                                    },
                                    "likes_count": 100,
                                    "title": "Shot #2",
                                    "user": Object {
                                      "avatar_url": "https://dribbble.com/user/avatar.png",
                                      "html_url": "https://dribbble.com/user/",
                                      "name": "User #2",
                                    },
                                    "views_count": 100,
                                  }
            }
/>,
          <withRouter(Shot)
            shot={
                        Object {
                                    "description": "Shot Description #3",
                                    "id": 3,
                                    "images": Object {
                                      "hidpi": "https://dribbble/images/hidpi",
                                      "normal": "https://dribbble/images/normal",
                                    },
                                    "likes_count": 100,
                                    "title": "Shot #3",
                                    "user": Object {
                                      "avatar_url": "https://dribbble.com/user/avatar.png",
                                      "html_url": "https://dribbble.com/user/",
                                      "name": "User #3",
                                    },
                                    "views_count": 100,
                                  }
            }
/>,
        ],
      ],
      "className": "shots",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "exact": true,
          "path": "/:id(\\\\d+)",
          "render": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "shot": Object {
            "description": "Shot Description #1",
            "id": 1,
            "images": Object {
              "hidpi": "https://dribbble/images/hidpi",
              "normal": "https://dribbble/images/normal",
            },
            "likes_count": 100,
            "title": "Shot #1",
            "user": Object {
              "avatar_url": "https://dribbble.com/user/avatar.png",
              "html_url": "https://dribbble.com/user/",
              "name": "User #1",
            },
            "views_count": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "shot": Object {
            "description": "Shot Description #2",
            "id": 2,
            "images": Object {
              "hidpi": "https://dribbble/images/hidpi",
              "normal": "https://dribbble/images/normal",
            },
            "likes_count": 100,
            "title": "Shot #2",
            "user": Object {
              "avatar_url": "https://dribbble.com/user/avatar.png",
              "html_url": "https://dribbble.com/user/",
              "name": "User #2",
            },
            "views_count": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "shot": Object {
            "description": "Shot Description #3",
            "id": 3,
            "images": Object {
              "hidpi": "https://dribbble/images/hidpi",
              "normal": "https://dribbble/images/normal",
            },
            "likes_count": 100,
            "title": "Shot #3",
            "user": Object {
              "avatar_url": "https://dribbble.com/user/avatar.png",
              "html_url": "https://dribbble.com/user/",
              "name": "User #3",
            },
            "views_count": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Route
            exact={true}
            path="/:id(\\\\d+)"
            render={[Function]}
/>,
          Array [
            <withRouter(Shot)
              shot={
                            Object {
                                          "description": "Shot Description #1",
                                          "id": 1,
                                          "images": Object {
                                            "hidpi": "https://dribbble/images/hidpi",
                                            "normal": "https://dribbble/images/normal",
                                          },
                                          "likes_count": 100,
                                          "title": "Shot #1",
                                          "user": Object {
                                            "avatar_url": "https://dribbble.com/user/avatar.png",
                                            "html_url": "https://dribbble.com/user/",
                                            "name": "User #1",
                                          },
                                          "views_count": 100,
                                        }
              }
/>,
            <withRouter(Shot)
              shot={
                            Object {
                                          "description": "Shot Description #2",
                                          "id": 2,
                                          "images": Object {
                                            "hidpi": "https://dribbble/images/hidpi",
                                            "normal": "https://dribbble/images/normal",
                                          },
                                          "likes_count": 100,
                                          "title": "Shot #2",
                                          "user": Object {
                                            "avatar_url": "https://dribbble.com/user/avatar.png",
                                            "html_url": "https://dribbble.com/user/",
                                            "name": "User #2",
                                          },
                                          "views_count": 100,
                                        }
              }
/>,
            <withRouter(Shot)
              shot={
                            Object {
                                          "description": "Shot Description #3",
                                          "id": 3,
                                          "images": Object {
                                            "hidpi": "https://dribbble/images/hidpi",
                                            "normal": "https://dribbble/images/normal",
                                          },
                                          "likes_count": 100,
                                          "title": "Shot #3",
                                          "user": Object {
                                            "avatar_url": "https://dribbble.com/user/avatar.png",
                                            "html_url": "https://dribbble.com/user/",
                                            "name": "User #3",
                                          },
                                          "views_count": 100,
                                        }
              }
/>,
          ],
        ],
        "className": "shots",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "exact": true,
            "path": "/:id(\\\\d+)",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "shot": Object {
              "description": "Shot Description #1",
              "id": 1,
              "images": Object {
                "hidpi": "https://dribbble/images/hidpi",
                "normal": "https://dribbble/images/normal",
              },
              "likes_count": 100,
              "title": "Shot #1",
              "user": Object {
                "avatar_url": "https://dribbble.com/user/avatar.png",
                "html_url": "https://dribbble.com/user/",
                "name": "User #1",
              },
              "views_count": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "shot": Object {
              "description": "Shot Description #2",
              "id": 2,
              "images": Object {
                "hidpi": "https://dribbble/images/hidpi",
                "normal": "https://dribbble/images/normal",
              },
              "likes_count": 100,
              "title": "Shot #2",
              "user": Object {
                "avatar_url": "https://dribbble.com/user/avatar.png",
                "html_url": "https://dribbble.com/user/",
                "name": "User #2",
              },
              "views_count": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "shot": Object {
              "description": "Shot Description #3",
              "id": 3,
              "images": Object {
                "hidpi": "https://dribbble/images/hidpi",
                "normal": "https://dribbble/images/normal",
              },
              "likes_count": 100,
              "title": "Shot #3",
              "user": Object {
                "avatar_url": "https://dribbble.com/user/avatar.png",
                "html_url": "https://dribbble.com/user/",
                "name": "User #3",
              },
              "views_count": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
